# assignment-5-RoaringInferno

./: .gitignore  CMakeLists.txt
exercise-1/: main.cpp
exercise-2/: main.cpp
exercise-3/: main.cpp
exercise-4/: main.cpp
